Fix spacing for technologies in the tech section and projects, and deploy to Heroku.

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -185,39 +185,43 @@ h3 {
 
 
 #tech {
-    margin-bottom: 15%;
-    z-index: 3;
+    margin-bottom: 10%;
 }
 
 #tech-stack-p {
     margin: 0;
 }
 
-.skill-icon-container {
+.skill-icon-container {    
     margin-top: 5%;
-    display: grid;
-    grid-template-columns: 15% 15% 15% 15% 15% 15%;
-    justify-items: center;
-    gap: 2%;
-}
+    display: flex ;
+    justify-content: center;
+    flex-wrap: wrap;
+} 
 
 .icon-name {
     align-items: center;
     display: flex;
-    position: absolute;
-    font-size: clamp(0.8rem, 1.2vw, 3rem);
-    padding-top: 2.5em;
     margin-top: 7%;
     text-align: center;
+    font-size: clamp(0.8rem, 1.4vw, 3rem);
+}
+
+.tech-pair-container {
+    display: flex;
+    border: 1px solid green;
+    width: fit-content;
 }
 
 .icon-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: clamp(0.8rem, 5vw, 4rem);
     justify-content: center;
-    font-size: clamp(0.8rem, 4vw, 8rem);
-}
+    margin: 2% 6%;
+    width: fit-content;
+} 
 
 /* ------ Projects Section ------- */
 
@@ -641,7 +645,7 @@ textarea:focus {
 
     .tech-container {
         width: 100%;
-        padding-left: 5%;
+        padding: 3% 0 0 5%;
     }
 
     #email-message {
